tests/sksl/errors/ArgumentModifiers.sksl
void test(int x);
void test(out int x) {}
